--- a/package.json
+++ b/package.json
@@ -13,21 +13,26 @@
     "@react-router/node": "^7.7.1",
     "compression": "^1.7.5",
     "express": "^5.1.0",
+    "express-csp-header": "^6.1.0",
+    "express-ws": "^5.0.2",
     "isbot": "^5.1.27",
     "morgan": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.7.1"
+    "react-router": "^7.7.1",
+    "ws": "^8.15.0"
   },
   "devDependencies": {
     "@react-router/dev": "^7.7.1",
     "@types/compression": "^1.7.5",
     "@types/express": "^5.0.1",
     "@types/express-serve-static-core": "^5.0.6",
+    "@types/express-ws": "^3.0.5",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^20",
+    "@types/node": "^22",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/ws": "^8.5.4",
     "cross-env": "^7.0.3",
     "typescript": "^5.8.3",
     "vite": "^6.3.3",
