--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["server.js", "vite.config.ts"],
+  "include": ["server.js", "vite.config.ts", "server/**/*.ts"],
   "compilerOptions": {
     "composite": true,
     "strict": true,
