Set Node.js to 22

--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
     "typescript": "^5.8.3",
     "vite": "^6.3.3",
     "vite-tsconfig-paths": "^5.1.4"
+  },
+  "engines": {
+    "node": "^22",
+    "npm": "^10"
   }
 }
