--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "react-router build",
     "dev": "cross-env NODE_ENV=development node server.js",
     "start": "node server.js",
-    "typecheck": "react-router typegen && tsc -b"
+    "typecheck": "react-router typegen && tsc -b",
+    "lint": "eslint --fix"
   },
   "dependencies": {
     "@react-router/express": "^7.7.1",
@@ -23,7 +24,11 @@
     "ws": "^8.15.0"
   },
   "devDependencies": {
+    "@eslint/css": "^0.10.0",
+    "@eslint/js": "^9.33.0",
+    "@eslint/json": "^0.13.1",
     "@react-router/dev": "^7.7.1",
+    "@stylistic/eslint-plugin": "^5.2.3",
     "@types/compression": "^1.7.5",
     "@types/express": "^5.0.1",
     "@types/express-serve-static-core": "^5.0.6",
@@ -34,7 +39,12 @@
     "@types/react-dom": "^19.1.2",
     "@types/ws": "^8.5.4",
     "cross-env": "^7.0.3",
+    "eslint": "^9.33.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.3.0",
+    "jiti": "^2.5.1",
     "typescript": "^5.8.3",
+    "typescript-eslint": "^8.39.0",
     "vite": "^6.3.3",
     "vite-tsconfig-paths": "^5.1.4"
   },
