--- a/tsconfig.vite.json
+++ b/tsconfig.vite.json
@@ -5,7 +5,8 @@
     "app/**/*",
     "app/**/.server/**/*",
     "app/**/.client/**/*",
-    "server/**/*"
+    "server/**/*",
+    "common/**/*"
   ],
   "compilerOptions": {
     "composite": true,
