Made client code use the client TypeScript configuration.

--- a/tsconfig.vite.json
+++ b/tsconfig.vite.json
@@ -25,7 +25,7 @@
     "jsx": "react-jsx",
     "baseUrl": ".",
     "rootDirs": [
-      ".",
+      "./app",
       "./.react-router/types"
     ],
     "paths": {
