--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "cross-env NODE_ENV=development node server.js",
     "start": "node server.js",
     "typecheck": "react-router typegen && tsc -b",
-    "lint": "eslint --fix"
+    "lint": "eslint --fix",
+    "test": "jest"
   },
   "dependencies": {
     "@react-router/express": "^7.7.1",
@@ -29,10 +30,13 @@
     "@eslint/json": "^0.13.1",
     "@react-router/dev": "^7.7.1",
     "@stylistic/eslint-plugin": "^5.2.3",
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/react": "^16.3.0",
     "@types/compression": "^1.7.5",
     "@types/express": "^5.0.1",
     "@types/express-serve-static-core": "^5.0.6",
     "@types/express-ws": "^3.0.5",
+    "@types/jest": "^30.0.0",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22",
     "@types/react": "^19.1.2",
@@ -40,9 +44,13 @@
     "@types/ws": "^8.5.4",
     "cross-env": "^7.0.3",
     "eslint": "^9.33.0",
+    "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.3.0",
+    "jest": "^30.0.5",
+    "jest-environment-jsdom": "^30.0.5",
     "jiti": "^2.5.1",
+    "ts-jest": "^29.4.1",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.39.0",
     "vite": "^6.3.3",
